--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
 
           $.Velocity(enter, 'transition.flipYOut', {stagger: 100, backwards: true})
           .then(function(elem){
-            window.location = "file:///media/kajo/code/github/arcInvestments/index.html"
+            window.location = "index.html"
           })
         })
       })
