--- a/projects.html
+++ b/projects.html
@@ -21,16 +21,18 @@
       <div class="col-xs-4"> 
         <p class="enter mini-display">ARC VISION</p>
       </div>
-      <div class="col-xs-8 col-xs-offset-0 col-sm-8 col-sm-offset-0 col-md-8 col-md-offset-0 col-lg-4 col-lg-offset-1 ">
-        <ul class="navbar enter nav nav-pills">
-          <li><a class="leave" href="#">Home</a></li>
-          <li class="active"><a href="#">Projects</a></li>
-          <li><a class="leave" href="#">Contact</a></li>
-          <li><a class="leave" href="#">About</a></li>
-        </ul>
-      </div>
-      
       <div class="container">
+        <div class="row">    
+          <div class="col-xs-8 col-xs-offset-0 col-sm-8 col-sm-offset-0 col-md-8 col-md-offset-0 col-lg-4 col-lg-offset-1 ">
+            <ul class="navbar enter nav nav-pills">
+              <li><a class="leave" href="#">Home</a></li>
+              <li class="active"><a href="#">Projects</a></li>
+              <li><a class="leave" href="#">Contact</a></li>
+              <li><a class="leave" href="#">About</a></li>
+            </ul>
+          </div>
+        </div>
+
         <div class="row">
           <div class="projects col-lg-10 col-lg-offset-1 col-md-12">
             <div class="enter project-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
@@ -53,8 +55,6 @@
           </div>
         </div>
       </div>
-
-
 
     </div>
 
