fixing placement errors of navbar

--- a/projects.html
+++ b/projects.html
@@ -29,8 +29,11 @@
           <li><a class="leave" href="#">About</a></li>
         </ul>
       </div>
-      
       <div class="container">
+
+        <div class="row nav-spacer">
+        </div>
+      
         <div class="row">
           <div class="projects col-lg-10 col-lg-offset-1 col-md-12">
             <div class="enter project-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
