--- a/projects.html
+++ b/projects.html
@@ -29,33 +29,117 @@
           <li><a class="leave" href="#">About</a></li>
         </ul>
       </div>
+
       <div class="container">
 
         <div class="row nav-spacer">
         </div>
       
         <div class="row">
-          <div class="projects col-lg-10 col-lg-offset-1 col-md-12">
-            <div class="enter project-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
-              <div class="col-xs-12 text-center project-title"> SVENSKA</div>
-              <div class="col-xs-12 project-thumb"> <img class="" src="./img/svenska1.jpg"/> </div>
+          <div class="project-thumbs col-lg-10 col-lg-offset-1 col-md-12">
+            <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
+              <div class="col-xs-12 text-center project-title">SVENSKA</div>
+              <div class="col-xs-12 project-thumb"> <img class="img-thumb" src="./img/svenska1.jpg"/> </div>
             </div>
-            <div class="enter project-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
-              <div class="col-xs-12 text-center project-title"> PARMER LANE</div>
-              <div class="col-xs-12 project-thumb"> <img class="" src="./img/svenska2.jpg"/> </div>
+            <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
+              <div class="col-xs-12 text-center project-title">PARMER LANE</div>
+              <div class="col-xs-12 project-thumb"> <img class="img-thumb" src="./img/svenska2.jpg"/> </div>
             </div>
 
-            <div class="enter project-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
-              <div class="col-xs-12 text-center project-title"> RIVERSIDE</div>
-              <div class="col-xs-12 project-thumb"> <img class="" src="./img/svenska3.jpg"/> </div>
+            <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
+              <div class="col-xs-12 text-center project-title">RIVERSIDE</div>
+              <div class="col-xs-12 project-thumb"> <img class="img-thumb" src="./img/svenska3.jpg"/> </div>
             </div>
-            <div class="enter project-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
-              <div class="col-xs-12 text-center project-title"> EAST 15th</div>
-              <div class="col-xs-12 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
+            <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
+              <div class="col-xs-12 text-center project-title">EAST 15th</div>
+              <div class="col-xs-12 project-thumb"> <img class="img-thumb" src="./img/svenska4.jpg"/> </div>
             </div>            
           </div>
-        </div>
-      </div>
+
+          <div class="projects">
+            <div class="project-box col-xs-12 EAST-15th">
+              <div class='row'>
+                <div class="col-xs-1"><img class="back-arrow" src="img/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+              </div>
+              <div class='row'>
+                <div class="clearfix col-xs-12 text-center project-title"> EAST 15th</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
+                <div class="col-cs-7 col-xs-offset-1">
+                  <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
+
+                  Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
+
+                  Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                </div>
+              </div>
+
+            </div> <!-- project-box -->
+
+            <div class="project-box col-xs-12 RIVERSIDE">
+              <div class='row'>
+                <div class="col-xs-1"><img class="back-arrow" src="img/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+              </div>
+              <div class='row'>
+                <div class="clearfix col-xs-12 text-center project-title"> RIVERSIDE</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
+                <div class="col-cs-7 col-xs-offset-1">
+                  <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
+
+                  Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
+
+                  Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                </div>
+              </div>
+
+            </div> <!-- project-box -->
+
+            <div class="project-box col-xs-12 PARMER-LANE">
+              <div class='row'>
+                <div class="col-xs-1"><img class="back-arrow" src="img/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+              </div>
+              <div class='row'>
+                <div class="clearfix col-xs-12 text-center project-title"> PARMER-LANE</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
+                <div class="col-cs-7 col-xs-offset-1">
+                  <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
+
+                  Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
+
+                  Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                </div>
+              </div>
+
+            </div> <!-- project-box -->
+
+            <div class="project-box col-xs-12 SVENSKA">
+              <div class='row'>
+                <div class="col-xs-1"><img class="back-arrow" src="img/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
+              </div>
+              <div class='row'>
+                <div class="clearfix col-xs-12 text-center project-title"> SVENSKA</div>
+              </div>
+              <div class="row">
+                <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
+                <div class="col-cs-7 col-xs-offset-1">
+                  <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
+
+                  Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
+
+                  Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                </div>
+              </div>
+
+            </div> <!-- project-box -->
+
+          </div> <!-- projects -->
+        </div> <!-- row -->
+      </div> <!-- container -->
 
 
 
@@ -83,6 +167,32 @@
             window.location = "index.html"
           })
         })
+
+        $('.project-mini-box').click(function(e){
+          var thebox = this;
+          var project = thebox.querySelector('.project-title').innerHTML;
+          project = project.split(" ");
+          project = project.join("-");
+          project = "." + project;
+          console.log("showing: " + project);
+
+          project   = document.querySelectorAll(project);
+          miniBoxes = document.querySelectorAll('.project-mini-box');
+
+          $.Velocity(miniBoxes, 'transition.flipYOut', {stagger: 100, delay: 500, reverse: true})
+          .then(function(){
+            $.Velocity(project, 'transition.flipYIn', {stagger: 100, delay: 500});
+            setInterval(function(){$('.back-arrow').velocity('callout.flash')}, 5000);
+            $('.back-arrow').click(function(){
+              $.Velocity(project, 'transition.flipYOut', {stagger: 100, delay: 500})
+              .then(function(){
+                $.Velocity(miniBoxes, 'transition.flipYIn', {stagger: 100, delay: 500})
+              })
+            })
+          })
+
+        })
+
       })
     </script>
   </body>
