--- a/projects.html
+++ b/projects.html
@@ -58,13 +58,13 @@
 
           <div class="projects">
             <div class="project-box col-xs-12 EAST-15th">
-                            <div class='row'>
+              <div class='row'>
                 <div class="col-xs-1"><img class="back-arrow" src="img/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
                 <div class="col-xs-11 text-center project-title">EAST 15th</div>
               </div>
               <div class="row">
                 <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
-                <div class="col-cs-7 col-xs-offset-1">
+                <div class="col-xs-8 col-xs-offset-1">
                   <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
 
                   Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
@@ -72,7 +72,6 @@
                   Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                 </div>
               </div>
-
             </div> <!-- project-box -->
 
             <div class="project-box col-xs-12 RIVERSIDE">
@@ -82,7 +81,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
-                <div class="col-cs-7 col-xs-offset-1">
+                <div class="col-xs-8 col-xs-offset-1">
                   <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
 
                   Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
@@ -90,7 +89,6 @@
                   Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                 </div>
               </div>
-
             </div> <!-- project-box -->
 
             <div class="project-box col-xs-12 PARMER-LANE">
@@ -100,7 +98,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
-                <div class="col-cs-7 col-xs-offset-1">
+                <div class="col-xs-8 col-xs-offset-1">
                   <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
 
                   Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
@@ -108,7 +106,6 @@
                   Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                 </div>
               </div>
-
             </div> <!-- project-box -->
 
             <div class="project-box col-xs-12 SVENSKA">
@@ -118,7 +115,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
-                <div class="col-cs-7 col-xs-offset-1">
+                <div class="col-xs-8 col-xs-offset-1">
                   <p class="project-description">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.<br/> <br/>
 
                   Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions. <br/> <br/>
@@ -126,7 +123,6 @@
                   Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
                 </div>
               </div>
-
             </div> <!-- project-box -->
 
           </div> <!-- projects -->
