--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
             <div class="project-box col-xs-12 PARMER-LANE">
               <div class='row'>
                 <div class="col-xs-1"><img class="back-arrow" src="img/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
-                <div class="col-xs-11 text-center project-title">PARMER-LANE</div>
+                <div class="col-xs-11 text-center project-title">PARMER LANE</div>
               </div>
               <div class="row">
                 <div class="col-xs-3 project-thumb"> <img class="" src="./img/svenska4.jpg"/> </div>
