small logo updates, background update

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
   <body>
     <div class="site-wrapper">
       <div class="col-xs-4"> 
-        <p class="enter mini-display">ARC VISION</p>
+        <p class="enter mini-display">A<span class="the_r">R</span>C</p>
       </div>
       <div class="col-xs-8 col-xs-offset-0 col-sm-8 col-sm-offset-0 col-md-8 col-md-offset-0 col-lg-4 col-lg-offset-1 ">
         <ul class="navbar enter nav nav-pills">
