--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1">
-            <p class="exit main-display text-center">A<span class="the_r">R</span>C VISION</p>
+            <p class="exit main-display text-center">A<span class="the_r">R</span>C</p>
           </div>
         </div>
         <div class="row">
