--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <meta name="author" content="kylebaker.io">
     <title>ARC</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Custom styles for this template -->
+    <link href="css/all.css" rel="stylesheet">    
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
@@ -22,19 +24,34 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1">
-            <p class="exit main-display text-center">ARC VISION</p>
+            <p class="exit main-display text-center">A<span class="the-r">R</span>C</p>
+            <div class='slogan-container'>
+              <p class="exit text-center slogan">A <span class="r-word the-r">Remarkable</span> Company</p>
+            </div>
           </div>
         </div>
+
         <div class="row">
-          <div class="col-lg-4 col-lg-offset-4 col-xs-10 col-xs-offset-2 col-md-6 col-md-offset-4 col-sm-6 col-sm-offset-3">
+          <div class="col-lg-4 col-lg-offset-4 col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
             <ul class="exit nav nav-pills">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a class="leave" href="#">Projects</a></li>
-              <li><a class="leave" href="#">Contact</a></li>
-              <li><a class="leave" href="#">About</a></li>
+              <div class="row">
+                <div class="col-xs-3">
+                  <li class="active"><a onclick="document.location.reload(true);"><b>Home</b></a></li>
+                </div>
+                <div class="col-xs-3"><li>
+                  <a class="leave">Projects</a></li>
+                </div>
+                <div class="col-xs-3"><li>
+                  <a class="leave">Contact</a></li>
+                </div>
+                <div class="col-xs-3"><li>
+                  <a class="leave">About</a></li>
+                </div>
+              </div>
             </ul>
           </div>
         </div>
+
       </div>
 
     </div>
@@ -42,12 +59,72 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/velocity.js"></script>
-    <script src="js/velocity-ui.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/3.2.1/es6-promise.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- <script src="js/velocity-ui.js"></script> -->
+    <!-- <script src="js/velocity.js"></script> -->
+    <!-- <script src="js/jquery.min.js"></script> -->
+    <!-- <script src="js/bootstrap.min.js"></script> -->
+    <!-- <script src="js/ie10-viewport-bug-workaround.js"></script> -->
+    <script>
+    function rShuffle(array) {
+      var currentIndex = array.length, temporaryValue, randomIndex;
+
+      // While there remain elements to shuffle...
+      while (0 !== currentIndex) {
+
+        // Pick a remaining element...
+        randomIndex = Math.floor(Math.random() * currentIndex);
+        currentIndex -= 1;
+
+        // And swap it with the current element.
+        temporaryValue = array[currentIndex];
+        array[currentIndex] = array[randomIndex];
+        array[randomIndex] = temporaryValue;
+      }
+
+      return array;
+    }
+
+      $(document).ready(function(){
+        $('.main-display').velocity("slideDown", { duration: 1500 });
+        $('.nav').velocity({ opacity: '1'}, { delay: 1000 }, { duration: 2000 });
+
+        var rWords = ['Remarkable', 'Revolutionary', 'Real Estate', 'Reliable', 'Resilient', 'Respected', 'Renowned'];
+        rWords = rShuffle(rWords);
+        $('.r-word').html(rWords[0]);
+        $('.slogan').velocity("transition.slideLeftIn", { delay: 1500, duration: 1500 });
+        
+        // var rIndex = 1;
+        // setInterval(function(){
+        //   var slogan = document.querySelector('.slogan');
+        //   var refresh = $.Velocity(slogan, 'transition.slideRightOut', { duration: 1500 })
+        //   refresh.then(function(){
+        //     console.log("ran");
+        //     rIndex = rIndex === rWords.length - 1 ? 0 : rIndex + 1;
+        //     $('.r-word').html(rWords[rIndex]);
+        //     $('.slogan').velocity("transition.slideLeftIn", { duration: 1500 });
+        //   })
+        // }, 6000);
+
+        $('.leave').click(function(e){
+          var clicked = e.currentTarget.innerHTML.toLowerCase();
+          var path = clicked === "home" ? "index" : clicked;
+          // path += ".html"; // because of surge deploy
+          var exit = document.querySelectorAll('.exit');
+
+          var exitTransition = $.Velocity(exit, 'transition.slideRightOut', {stagger: 250});
+
+          exitTransition.then(function(elem){
+            $(window).unload(function(){}); //fix for firefox back button bug
+            window.location.href = path;
+          });
+        })
+      });
+    </script>
   </body>
 </html>
+
