finally looks good on iphone 4. several small visual cleanups. updated text on about page and brushy creek and one other project.

--- a/about.html
+++ b/about.html
@@ -126,11 +126,11 @@
                   <br/><br/>
                   <b>Locations</b> <br/> 
                   Primary Markets: <br/>
-                  San Antonio and surrounding areas
                   Austin and surrounding areas
                   <br/><br/>
                   Secondary Markets:<br/> 
-                  Waco, Temple, Belton, Killeen, San Marcos, New Braunfels, Kyle, Buda, Elgin, Bastrop, Dripping Springs, Spicewood, Liberty Hill, Florence, Coupland, Taylor, Georgetown, Jarrell, Webberville and other surrounding areas within 45 minutes of downtown Austin.
+                  Waco, Temple, Belton, Killeen, San Marcos, New Braunfels, Kyle, Buda, Elgin, Bastrop, Dripping Springs, Spicewood, Liberty Hill, Florence, Coupland, Taylor, Georgetown, Jarrell, Webberville and other surrounding areas within 45 minutes of downtown Austin.<br/>
+                  San Antonio and surrounding areas
                   <br/><br/>
                   <b>Property Types</b> <br/>
                   Rural land 50 acres or larger <br/>
