--- a/projects.html
+++ b/projects.html
@@ -62,42 +62,42 @@
             <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">MEADOWVIEW</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block img-thumb img-responsive" src="./img/meadowview/meadowview7.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/meadowview/meadowview7.jpg"/> 
               </div>
             </div>
 
             <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title project-title-small">FLORENCE RANCHETTES</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block img-thumb img-responsive" src="./img/florence/cover.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/florence/cover.jpg"/> 
               </div>
             </div>
 
             <div class="enter project-mini-box col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">BRUSHY CREEK</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block img-thumb img-responsive" src="./img/brushycreek/brushycreek2.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/brushycreek/brushycreek2.jpg"/> 
               </div>
             </div>
          
             <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">SVENSKA ESTATES</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block img-thumb img-responsive" src="./img/svenska/svenska7.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/svenska/svenska7.jpg"/> 
               </div>
             </div>
 
             <div class="enter project-mini-box sold col-md-5 col-md-offset-0 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">BOIS D'ARC</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block img-thumb img-responsive" src="./img/boisdarc/boisdarc2.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/boisdarc/boisdarc2.jpg"/> 
               </div>
             </div>
       
             <div class="enter project-mini-box sold col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">CHURCH VIEW</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block img-thumb img-responsive" src="./img/churchview/churchview1.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/churchview/churchview1.jpg"/> 
               </div>
             </div>            
           </div>
@@ -110,7 +110,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">MEADOWVIEW</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive" src="./img/meadowview/meadowview2.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/meadowview/meadowview2.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
@@ -152,7 +152,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">FLORENCE RANCHETTES</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive" src="./img/florence/photo_8.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/florence/photo_8.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
@@ -179,7 +179,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">SVENSKA ESTATES</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive" src="./img/svenska/svenska2.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/svenska/svenska2.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description"> 
                     <b>
@@ -211,7 +211,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">BRUSHY CREEK</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive" src="./img/brushycreek/brushycreek3.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/brushycreek/brushycreek3.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
@@ -219,10 +219,10 @@
                       2016
                     </b>
                     <br/><br/>
-                    The Heights At Brushy Creek, just around the corner from the prestigious Lookout at
-                    Brushy Creek, is a highly restricted subdivision governed by an ACC.  Phase One is 
-                    located on the highest point in eastern Williamson County with some of the best 
-                    views in the area, as far as downtown Hutto and Round Rock. Most lots have water frontage on rolling hills with mature trees.  The beautiful and tranquil surroundings make this the perfect setting to build your dream home.
+                    The Heights At Brushy Creek, just around the corner from the prestigious Lookout at Brushy Creek, 
+                    is located on the highest point in eastern Williamson County with some of the best views in the area, 
+                    as far as downtown Hutto and Round Rock. Most lots have water frontage on rolling hills with mature 
+                    trees.  The beautiful and tranquil surroundings make this the perfect setting to build your dream home.
                     These lots offer the unique experience of country living, while at the same time 
                     providing easy access to city conveniences. 
                     <br/><br/>
@@ -232,30 +232,26 @@
                     <br/><br/>
                     This is a rare opportunity to own one of only 4 highly restricted lots in Phase One. There is nothing like this in the area. Call today for more information!
                     <br/><br/>
-                    <b>Tract 1</b> 
-                    <br/><br/>
+                    <b>Tract 1</b><br/>
+                    <b>$179,000. </b>
+                    <br/>
                     This beautiful 10.447 acre waterfront lot offers amazing hilltop views as well as its own private pond.  A water meter and driveway are included in the price of this lot.
                     <br/><br/>
-                    <b>$215,000. </b>
-                    <br/><br/>
-                    <b>Tract 2</b> 
-                    <br/><br/>
+                    <b>Tract 2</b><br/>
+                    <b>$179,900.</b>
+                    <br/>
                     This beautiful 10 acre water front lot offers the largest waterfront and road area in the subdivision as well as beautiful vista and hillside views.  A water meter is
                     included in the price of this lot. 
                     <br/><br/>
-                    <b>$199,900.</b>
-                    <br/><br/>
-                    <b>Tract 3</b>
-                    <br/><br/>
+                    <b>Tract 3</b><br/>
+                    <b>$179,000</b>
+                    <br/>
                     This beautiful 11.25 acre hilltop lot offers some of the most amazing hilltop views in the area.   A water meter and driveway are included in the price of this lot.
                     <br/><br/>
-                    <b>$215,000</b>
-                    <br/><br/>
-                    <b>Tract 4</b>
-                    <br/><br/>
+                    <b>Tract 4</b><br/>
+                    <b>$179,900.</b>
+                    <br/>
                     This beautiful 11.245 acre lot sits at the highest point in eastern Williamson County, offering amazing hilltop views as far as downtown Hutto and Round Rock.  A water meter is included in the price of this lot. 
-                    <br/><br/>
-                    <b>$199,900.</b>
                   </p>
                 </div>
               </div>
@@ -267,7 +263,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">BOIS D'ARC</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive" src="./img/boisdarc/boisdarc1.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/boisdarc/boisdarc1.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
@@ -299,7 +295,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">CHURCH VIEW</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive" src="./img/churchview/churchview1.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/churchview/churchview1.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
