minor updates for title on project boxes on very small screens.

--- a/projects.html
+++ b/projects.html
@@ -149,7 +149,7 @@
             <div class="project-box col-xs-12 FLORENCE-RANCHETTES">
               <div class='row'>
                 <div class="col-xs-2 col-sm-1"><img class="back-arrow" src="img/misc/back-arrow.png" title="Click here to go back to the project gallery"></img></div>
-                <div class="col-xs-9 col-sm-10 text-center project-title noline">FLORENCE RANCHETTES</div>
+                <div class="col-xs-9 col-sm-10 text-center project-title project-title-small noline">FLORENCE RANCHETTES</div>
               </div>
               <div class="row">
                 <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/florence/photo_8.jpg"/> </div>
