--- a/about.html
+++ b/about.html
@@ -60,12 +60,12 @@
             <div class="col-xs-12">
               <ul class="enter navbar enter nav nav-pills">
                 <div class="row">
-                  <div class="col-xs-4">
+                  <div class="col-xs-3 col-sm-4">
                     <li class="sub-btn-1 active">
                       <a>IDENTITY</a>
                     </li>
                   </div>
-                  <div class="col-xs-8 col-md-offset-5 col-md-3 col-lg-offset-5 col-lg-3 col-sm-offset-4 col-sm-4">
+                  <div class="col-xs-7 col-xs-offset-2 col-md-offset-5 col-md-3 col-lg-offset-5 col-lg-3 col-sm-offset-4 col-sm-4" style="text-align:right;">
                     <li class="sub-btn-2">
                       <a>
                         <p style="text-align:right; display:inline;">
