--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,9 @@
     <link href="css/projects.css" rel="stylesheet">
   </head>
   <body>
+    <div class="blackbox">
+      <img class="vertical-center blackbox-img"/>
+    </div>
     <div class="site-wrapper">
 
       <div class="container">
@@ -110,7 +113,21 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">MEADOWVIEW</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/meadowview/meadowview2.jpg"/> </div>
+                <div class="col-xs-12 col-md-4 project-thumb blackbox-click">
+                  <img class="img-responsive project-box-img" src="./img/meadowview/meadowview2.jpg"/> 
+                </div>
+
+                <div class="col-xs-4 col-md-4 project-thumb blackbox-click">
+                  <img class="img-responsive project-box-img" src="./img/meadowview/meadowview5.jpg"/> 
+                </div>
+                <div class="col-xs-4 col-md-4 project-thumb blackbox-click">
+                  <img class="img-responsive project-box-img" src="./img/meadowview/meadowview3.jpg"/> 
+                </div>
+                <div class="col-xs-4 visible-sm visible-xs project-thumb blackbox-click">
+                  <img class="img-responsive project-box-img" src="./img/meadowview/meadowview4.jpg"/> 
+                </div>
+              </div>
+
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
@@ -345,6 +362,19 @@
     <script>
       $(document).ready(function(){
         $('.enter').velocity('transition.slideLeftIn', {stagger: 100, delay: 500});
+
+        $('.blackbox-click').click(function(event) {
+          var clickedImageSrc = event.target.currentSrc;
+          console.log(event.target.currentSrc, $(event.target), event);
+          // $(event.target).velocity("fadeIn", { duration: 1500 })
+          $('.blackbox-img').attr('src', clickedImageSrc);
+          $('.blackbox').velocity("fadeIn", { duration: 500 });
+          $(document.querySelector('.project-box')).velocity('fadeOut', {duration:500 });
+          $('.blackbox').click(function(event) {
+            $('.blackbox').velocity("fadeOut", { duration: 500 });
+            $(document.querySelector('.project-box')).velocity('fadeIn', {duration:500 });
+          });
+        });
 
         var assignLeave = function assignLeave() {
           $('.leave').unbind();
