added a hidden link to the experimental page.

--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
                     <br/><br/>
                     These highly sought after 10 and 20 acre tracts are priced to sell starting at only $99,000.
                     <br/><br/>
-                    Call today for information!
+                    <a href="projects-experimental.html" class="hidden-link">Call today for information!</a>
                   </p>
                 </div>
               </div>
