--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
             <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">MEADOWVIEW</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block project-minibox-img img-responsive" src="./img/meadowview/meadowview7.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/meadowview/1small.jpg"/> 
               </div>
             </div>
 
@@ -83,7 +83,7 @@
             <div class="enter project-mini-box col-md-5 col-md-offset-2 col-xs-offset-2 col-xs-8">
               <div class="col-xs-12 text-center project-title">BRUSHY CREEK</div>
               <div class="col-xs-12 project-thumb"> 
-                <img class="center-block project-minibox-img img-responsive" src="./img/brushycreek/brushycreek2.jpg"/> 
+                <img class="center-block project-minibox-img img-responsive" src="./img/brushycreek/1small.jpg"/> 
               </div>
             </div>
          
@@ -204,9 +204,9 @@
                     <br/><br/>
                     Located just 1/2 mile from Highway 183 and 6 miles from Hwy 195 make it within easy driving distance of dining, banking, shopping, entertainment and most major employment areas. It is also short drive to historic Florence and Georgetown as well as many local vineyards where you can enjoy good food, entertainment and some great Texas wines. Being just 30 minutes to Austin’s Tech Corridor on W. Parmer and 45 minutes to Downtown Austin make it the perfect location for those who are ready to escape the rat race to their own personal retreat in the country!
                     <br/><br/>
-                    Public Utilities by City of Georgetown Water and PEC Electric, leaving just septic. Reasonable Deed Restrictions to protect your investment. Ag Exempt - property taxes are Low! Florence Schools. No flood zone.
+                    PEC Electric, well and septic needed. Reasonable Deed Restrictions to protect your investment. Ag Exempt - property taxes are Low! Florence Schools. No flood zone.
                     <br/><br/>
-                    This is a rare opportunity to have your very own little piece of Texas countryside and still be within a short distance of all the city conveniences. Availability for this type of property is limited in the area. Call today for more information!
+                    Prices ranging from $65,000 to $99,000 this is a rare opportunity to have your very own little piece of Texas countryside and still be within a short distance of all the city conveniences. Availability for this type of property is limited in the area. Call today for more information!
                   </p>
                 </div>
               </div>
@@ -250,7 +250,7 @@
                 <div class="col-xs-9 col-sm-10 text-center project-title noline">BRUSHY CREEK</div>
               </div>
               <div class="row">
-                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/brushycreek/brushycreek3.jpg"/> </div>
+                <div class="col-xs-12 col-sm-4 project-thumb"> <img class="img-responsive project-box-img" src="./img/brushycreek/2.jpg"/> </div>
                 <div class="col-xs-12 col-sm-8">
                   <p class="project-description">
                     <b>
@@ -258,39 +258,23 @@
                       2016
                     </b>
                     <br/><br/>
-                    The Heights At Brushy Creek, just around the corner from the prestigious Lookout at Brushy Creek, 
-                    is located on the highest point in eastern Williamson County with some of the best views in the area, 
-                    as far as downtown Hutto and Round Rock. Most lots have water frontage on rolling hills with mature 
-                    trees.  The beautiful and tranquil surroundings make this the perfect setting to build your dream home.
-                    These lots offer the unique experience of country living, while at the same time 
-                    providing easy access to city conveniences. 
+                    The Heights at Brushy Creek offers our choice of 8 beautiful lots each with unique features that make them the perfect spot to build your dream home. The beautiful and tranquil surroundings make this the ideal setting whatever your preference is.
                     <br/><br/>
-                    Shopping and entertainment is less than 10 minutes away along with some excellent 
-                    golf courses and easy access to Toll Road 130.  Being approximately 30 minutes 
-                    from Downtown Austin makes this property a prime location. 
+                    If <b>hilltop</b> living is you dream then lots 5 – 8 have exactly what you are looking for. These lots range in size from 3 to 7 acres and have gorgeous hill country views in all directions - as far as Downtown Hutto and Round Rock. You’ll also be able to sit on your porch and watch the ducks take off on the private 3 acre lake at the foot of the hillside. Lot 8 offers the bonus feature of being the highest point in eastern Williamson County – what can beat that?!
                     <br/><br/>
-                    This is a rare opportunity to own one of only 4 highly restricted lots in Phase One. There is nothing like this in the area. Call today for more information!
+                    If <b>lake front</b> living is your dream then lots 2 and 3 are just for you! These are beautiful 5 acre lots sharing ownership of a 3 acre private lake. Nowhere else can you fish and at the same time enjoy the beautiful view of the sun setting over the hillside in your own back yard!
                     <br/><br/>
-                    <b>Tract 1</b><br/>
-                    <b>$179,900. </b>
-                    <br/>
-                    This beautiful 10.447 acre waterfront lot offers amazing hilltop views as well as its own private pond.  A water meter and driveway are included in the price of this lot.
+                    If <b>privacy</b> is what you prefer then lot 1 or 4 are right up your alley. for you, represent the smallest and largest lot available. Lot 1 is features a private stock tank and lot 8 has some lovely trees with great spots for building the home of your dreams. Both also provide amazing sunset views over the hilltops.
                     <br/><br/>
-                    <b>Tract 2</b><br/>
-                    <b>$179,900.</b>
-                    <br/>
-                    This beautiful 10 acre water front lot offers the largest waterfront and road area in the subdivision as well as beautiful vista and hillside views.  A water meter is
-                    included in the price of this lot. 
+                    <b>Come Home</b> to the unique experience of country living with easy access to all the city conveniences. Dining, shopping, entertainment and several excellent golf courses are less than 10 minutes away. With easy access to Toll Road I-30 it is approximately 30 minutes from Downtown Austin, making this property a prime location.
                     <br/><br/>
-                    <b>Tract 3</b><br/>
-                    <b>$179,900</b>
-                    <br/>
-                    This beautiful 11.25 acre hilltop lot offers some of the most amazing hilltop views in the area.   A water meter and driveway are included in the price of this lot.
+                    Seller is providing water taps on all lots and shared driveways on lots 5 & 6 and lots 7 & 8, Electricity lines either cross or are very near each lot so all you will need is to install a septic.
                     <br/><br/>
-                    <b>Tract 4</b><br/>
-                    <b>$179,900.</b>
-                    <br/>
-                    This beautiful 11.245 acre lot sits at the highest point in eastern Williamson County, offering amazing hilltop views as far as downtown Hutto and Round Rock.  A water meter is included in the price of this lot. 
+                    Starting at $74,900
+                    <br/><br/>
+                    - Ag Exempt - LOW Property Taxes
+                    <br/><br/>
+                    - Reasonable Deed Restrictions - No Flood Zone!
                   </p>
                 </div>
               </div>
