--- a/about.html
+++ b/about.html
@@ -9,6 +9,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="ARC">
     <meta name="author" content="kylebaker.io">
+
+    <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
+    <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
+    <meta name="theme-color" content="##FFD700" />
+
     <title>ARC | About</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
