--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="ARC">
     <meta name="author" content="kylebaker.io">
+
+    <!-- next two lines are experimental: trying to replicate facebook's blue border on mobile chrome, but gold instead -->
+    <!-- <meta name="mobile-web-app-capable" content="yes" /> -->
+    <meta name="theme-color" content="##FFD700" />
+
     <title>ARC</title>
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +23,6 @@
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    <!-- <img id="jumbo" class="img-responsive" src="img/cafe-crop-overlay.jpg"/> -->
     <div class="site-wrapper vertical-center">
       
       <div class="container text-center">
